# nanosvc

./: Makefile.am  README.md  configure.ac
doc/: nanosvc.texi  version.texi
include/: breakpoint.h  nanosvc.h  read.h  segment.h  structural_variant.h  trie.h
src/: breakpoint.c  main.c  nanosvc.c  read.c  segment.c  structural_variant.c  trie.c
tests/: cigar.c
